_site/sql/hive/src/test/resources/ql/src/test/queries/negative/invalid_map_index2.q
FROM src_thrift
INSERT OVERWRITE TABLE dest1 SELECT src_thrift.lint[0], src_thrift.mstringstring[concat('abc', 'abc')]
